fixed text overflow added fetch call from user data

--- a/src/Loader.css
+++ b/src/Loader.css
@@ -118,6 +118,9 @@
   align-items: center;
   padding-top: 2%;
   padding-bottom: 2%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .image-col {
